# vibe-keyboard

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.example.toml  device.md
.cargo-husky/hooks/: pre-commit  pre-push
.centy/: .centy-manifest.json  README.md  config.json  hooks.yaml  organization.json
.centy/archived/: config.yaml
.centy/docs/: config.yaml
.centy/issues/: 1cd13cf4-c086-4d2a-8b57-cdbb401fab13.md  31e52b2c-7391-4e11-9fc8-7144e75c77c5.md  473e6ff3-22e1-46e7-9fe3-d012ea859b78.md  554546ae-1bb7-4b17-97ac-7d3cdcc377e2.md  6656de9c-d448-4c1c-a596-d91fd44321e3.md  99a1419c-2743-4e01-aa39-c07c79f928b9.md  README.md  b8d38243-6b53-445c-9de9-49c8ebd6a221.md  c859e373-bcec-452a-909f-3513b40a6fa7.md  config.yaml  de84a50a-5b58-4658-a02b-7f776ab6f9f1.md  e1e12b5f-4240-4e5e-b1c2-8c3c5ef52d74.md  e8bd7629-bb36-4e4f-afaf-963db4a05a27.md
.centy/templates/: README.md
src/: actions.rs  config.rs  daemon.rs  device.rs  input.rs  logging.rs  main.rs  state.rs  usb.rs
src/application/: mod.rs  pages.rs
src/application/actions/: browser.rs  centy.rs  claude.rs  log_file.rs  mod.rs  search.rs  terminal.rs  vscode_config.rs
src/application/pages/: centy.rs  input_number.rs  issue_actions.rs  issue_list.rs  main_page.rs  mod.rs  project_actions.rs  project_list.rs
src/application/pages/centy/: issues.rs  mod.rs  projects.rs
src/domain/: actions.rs  keys.rs  mod.rs  navigation.rs
src/images/: draw.rs  mod.rs  terminal.rs
src/infrastructure/: mod.rs  persistence.rs
src/infrastructure/images/: centy.rs  claude.rs  draw.rs  log_file.rs  mod.rs  numpad.rs  project_item.rs  search.rs  sort.rs  terminal.rs  vscode_config.rs  web.rs
src/infrastructure/usb/: commands.rs  image.rs  mod.rs
src/input/: keys.rs  mod.rs  pages.rs
src/navigation/: mod.rs
src/presentation/tui/: app_state.rs  mod.rs  render.rs
src/tui/: mod.rs  render.rs
src/usb/: commands.rs  mod.rs
