[package]
name = "vibe-keyboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listen"
path = "src/main.rs"

[dependencies]
rusb = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
throbber-widgets-tui = "0.11.0"

[lints.clippy]
# Group at lower priority so the specific lints below (which may set a
# different level, e.g. `expect_used = "warn"`) take precedence over it.
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
panic_in_result_fn = "deny"
# `.expect()` is the remaining panic vector once `unwrap_used` and
# `panic_in_result_fn` are denied: it aborts the process on an unexpected
# value instead of surfacing a recoverable error. This binary drives USB
# hardware and a TUI, where a panic tears down the terminal and the live
# device session. Start at "warn" to flag existing call sites for incremental
# migration to proper error handling without breaking the build.
expect_used = "warn"
uninlined_format_args = "deny"
manual_let_else = "deny"
dbg_macro = "deny"
# Require doc comments to wrap code-like items (type names, function names,
# paths, URLs) in backticks. Unbackticked identifiers render as prose in
# rustdoc and can be silently mangled (e.g. `Vec<T>` losing its generics),
# so this keeps the crate's documentation accurate and readable.
doc_markdown = "deny"
# Items (enums, fns, consts) declared after statements are confusing because
# they are visible from the start of the enclosing scope regardless of where
# they appear in the body. Requiring them at the top of the block keeps each
# function's control flow linear and easier to read.
items_after_statements = "deny"
# Flag Duration constructors that use a smaller unit when a larger, equivalent
# unit reads more clearly (e.g. `from_millis(1000)` -> `from_secs(1)`). Keeps
# durations easy to read and harder to misparse (a stray zero turns 1s into 10s).
duration_suboptimal_units = "deny"

[package.metadata.cargo-machete]
ignored = ["hidapi", "mirajazz", "tokio"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
