[package]
name = "vibe-keyboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listen"
path = "src/main.rs"

[dependencies]
rusb = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
throbber-widgets-tui = "0.11.0"

[lints.clippy]
# Group at lower priority so the specific lints below (which may set a
# different level, e.g. `expect_used = "warn"`) take precedence over it.
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
panic_in_result_fn = "deny"
# `.expect()` is the remaining panic vector once `unwrap_used` and
# `panic_in_result_fn` are denied: it aborts the process on an unexpected
# value instead of surfacing a recoverable error. This binary drives USB
# hardware and a TUI, where a panic tears down the terminal and the live
# device session. Start at "warn" to flag existing call sites for incremental
# migration to proper error handling without breaking the build.
expect_used = "warn"
uninlined_format_args = "deny"
unused_result_ok = "deny"
manual_let_else = "deny"
# Require `Arc::clone(&x)` / `Rc::clone(&x)` over `x.clone()` so cheap
# refcount bumps on shared state (`Arc<Mutex<AppState>>` etc.) read
# clearly as such and are never mistaken for a deep clone.
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
# Require doc comments to wrap code-like items (type names, function names,
# paths, URLs) in backticks. Unbackticked identifiers render as prose in
# rustdoc and can be silently mangled (e.g. `Vec<T>` losing its generics),
# so this keeps the crate's documentation accurate and readable.
doc_markdown = "deny"
# Items (enums, fns, consts) declared after statements are confusing because
# they are visible from the start of the enclosing scope regardless of where
# they appear in the body. Requiring them at the top of the block keeps each
# function's control flow linear and easier to read.
items_after_statements = "deny"
# Flag Duration constructors that use a smaller unit when a larger, equivalent
# unit reads more clearly (e.g. `from_millis(1000)` -> `from_secs(1)`). Keeps
# durations easy to read and harder to misparse (a stray zero turns 1s into 10s).
duration_suboptimal_units = "deny"
# Require `Self` instead of the concrete type name inside `impl` blocks (e.g.
# `Self::new()` / `-> Self` rather than `AppState::new()` / `-> AppState`). Using
# `Self` keeps each impl decoupled from the type's spelling, so renaming the type
# is a one-line change and a copy-pasted impl block can't silently keep referring
# to the old type. It also reads as "this type" at a glance. The crate already
# follows this style, so `deny` locks in the clean state and prevents future drift.
use_self = "deny"
# Replace a closure that does nothing but forward its receiver to a method call
# (`|e| e.into_inner()`, `|s| s.to_string()`) with a direct method reference
# (`std::sync::PoisonError::into_inner`, `ToString::to_string`). This crate is
# closure-heavy: every shared-state access goes through
# `.lock().unwrap_or_else(|e| e.into_inner())` for poison recovery, and the
# wrapping closure only adds a layer of indirection that hides the single method
# actually being applied. The method-reference form is shorter, states the intent
# directly, and reads in the same family as the crate's other readability denies
# (`use_self`, `items_after_statements`, `manual_let_else`). All existing call
# sites have been migrated, so `deny` locks in the clean state and prevents drift.
redundant_closure_for_method_calls = "deny"

[package.metadata.cargo-machete]
ignored = ["hidapi", "mirajazz", "tokio"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
